Update jupyter notebook

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -23,9 +23,8 @@
    "source": [
     "timestamp = time.time()\n",
     "\n",
-    "if not os.path.exists(lotr.RUN_BEFORE_SE_STARTED_PATH):\n",
-    "    with open(lotr.RUN_BEFORE_SE_STARTED_PATH, 'w'):\n",
-    "        pass\n",
+    "with open(lotr.RUN_BEFORE_SE_STARTED_PATH, 'w'):\n",
+    "    pass\n",
     "\n",
     "if os.path.exists(lotr.PROJECT_CREATED_PATH):\n",
     "    os.remove(lotr.PROJECT_CREATED_PATH)\n",
@@ -35,12 +34,13 @@
     "if (not conf['reprocess_all'] and conf['reprocess_all_on_error'] and\n",
     "        os.path.exists(lotr.PIPELINE_STARTED_PATH)):\n",
     "    conf['reprocess_all'] = True\n",
-    "    logging.info('The previous update did not succeed, setting \"reprocess_all\" to \"true\"')\n",
+    "    logging.info('The previous update did not succeed, setting \"reprocess_all\" to \"true\" for this run')\n",
+    "\n",
+    "lotr.download_sheet(conf)\n",
     "\n",
     "with open(lotr.PIPELINE_STARTED_PATH, 'w'):\n",
     "    pass\n",
     "\n",
-    "lotr.download_sheet(conf)\n",
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
     "sets = lotr.sanity_check(conf, sets)\n",
@@ -191,11 +191,11 @@
     "\n",
     "        if 'mbprint' in conf['outputs'][lang]:\n",
     "            lotr.generate_jpg800_bleedmbprint(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_mbprint(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_mbprint(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'genericpng' in conf['outputs'][lang]:\n",
     "            lotr.generate_png800_bleedgeneric(conf, set_id, set_name, lang, skip_ids)\n",
-    "            lotr.generate_genericpng(conf, set_id, set_name, lang, lotr.translated_data(set_id, lang))\n",
+    "            lotr.generate_genericpng(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'tts' in conf['outputs'][lang]:\n",
     "            lotr.generate_tts(conf, set_id, set_name, lang, card_dict, scratch)\n",
