Don't generate translations for scratch sets

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -53,6 +53,7 @@
     "strange_eons = False\n",
     "changes = False\n",
     "for set_id, set_name in sets:\n",
+    "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "    if conf['octgn_set_xml']:\n",
     "        lotr.generate_octgn_set_xml(conf, set_id, set_name)\n",
     "\n",
@@ -73,12 +74,19 @@
     "\n",
     "    if conf['hallofbeorn_json']:\n",
     "        for lang in (conf['output_languages'] or ['English']):\n",
+    "            if scratch and lang != 'English':\n",
+    "                continue\n",
+    "\n",
     "            lotr.generate_hallofbeorn_json(conf, set_id, set_name, lang)\n",
     "\n",
     "    if conf['output_languages']:\n",
     "        lotr.copy_custom_images(conf, set_id, set_name)\n",
     "\n",
+    "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "    for lang in conf['output_languages']:\n",
+    "        if scratch and lang != 'English':\n",
+    "            continue\n",
+    "\n",
     "        strange_eons = True\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
@@ -139,7 +147,11 @@
     "    actual_sets = []\n",
     "\n",
     "for set_id, set_name in sets:\n",
+    "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "    for lang in conf['output_languages']:\n",
+    "        if scratch and lang != 'English':\n",
+    "            continue\n",
+    "\n",
     "        skip_set, skip_ids = lotr.get_skip_info(set_id, lang)\n",
     "        if skip_set:\n",
     "            logging.info('[%s, %s] No changes since the last run,'\n",
@@ -153,7 +165,6 @@
     "\n",
     "        card_data = lotr.translated_data(set_id, lang)\n",
     "        card_dict = lotr.full_card_dict()\n",
-    "        scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "\n",
     "        if conf['nobleed_300'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
