Add support for DragnCards HQ images

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -169,12 +169,19 @@
     "        if conf['nobleed_300'][lang]:\n",
     "            lotr.generate_png300_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
     "\n",
+    "        if conf['nobleed_480'][lang]:\n",
+    "            lotr.generate_png480_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
+    "\n",
     "        if conf['nobleed_800'][lang]:\n",
     "            lotr.generate_png800_nobleed(conf, set_id, set_name, lang, skip_ids)\n",
     "\n",
     "        if 'db' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_db(conf, set_id, set_name, lang, skip_ids)\n",
     "            lotr.generate_db(conf, set_id, set_name, lang, card_data)\n",
+    "\n",
+    "        if 'dragncards_hq' in conf['outputs'][lang]:\n",
+    "            lotr.generate_png480_dragncards_hq(set_id, set_name, lang, skip_ids)\n",
+    "            lotr.generate_dragncards_hq(conf, set_id, set_name, lang, card_data)\n",
     "\n",
     "        if 'octgn' in conf['outputs'][lang]:\n",
     "            lotr.generate_png300_octgn(set_id, set_name, lang, skip_ids)\n",
