Treat all files as UTf-8

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "timestamp = time.time()\n",
     "\n",
-    "with open(lotr.RUN_BEFORE_SE_STARTED_PATH, 'w'):\n",
+    "with open(lotr.RUN_BEFORE_SE_STARTED_PATH, 'w', encoding='utf-8'):\n",
     "    pass\n",
     "\n",
     "if os.path.exists(lotr.PROJECT_CREATED_PATH):\n",
@@ -38,7 +38,7 @@
     "\n",
     "lotr.download_sheet(conf)\n",
     "\n",
-    "with open(lotr.PIPELINE_STARTED_PATH, 'w'):\n",
+    "with open(lotr.PIPELINE_STARTED_PATH, 'w', encoding='utf-8'):\n",
     "    pass\n",
     "\n",
     "lotr.extract_data(conf)\n",
@@ -105,7 +105,7 @@
     "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
-    "    with open(lotr.PROJECT_CREATED_PATH, 'w'):\n",
+    "    with open(lotr.PROJECT_CREATED_PATH, 'w', encoding='utf-8'):\n",
     "        pass\n",
     "else:\n",
     "    if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
