Refactor the comments

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -50,7 +50,7 @@
     "    lotr.verify_images(conf)\n",
     "    lotr.reset_project_folders(conf)\n",
     "\n",
-    "strange_eons = False\n",
+    "eons = False\n",
     "changes = False\n",
     "for set_id, set_name in sets:\n",
     "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
@@ -87,7 +87,7 @@
     "        if scratch and lang != 'English':\n",
     "            continue\n",
     "\n",
-    "        strange_eons = True\n",
+    "        eons = True\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
     "        new_hash, old_hash = lotr.calculate_hashes(set_id, set_name, lang)\n",
@@ -111,10 +111,10 @@
     "    if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
     "        os.remove(lotr.PIPELINE_STARTED_PATH)\n",
     "\n",
-    "    if strange_eons:\n",
-    "        logging.info('No changes since the last run, skipping creating Strange Eons project')\n",
+    "    if eons:\n",
+    "        logging.info('No changes since the last run, skipping creating the project')\n",
     "    else:\n",
-    "        logging.info('No Strange Eons outputs, skipping creating Strange Eons project')\n",
+    "        logging.info('No project outputs, skipping creating the project')\n",
     "\n",
     "if os.path.exists(lotr.RUN_BEFORE_SE_STARTED_PATH):\n",
     "    os.remove(lotr.RUN_BEFORE_SE_STARTED_PATH)\n",
@@ -126,11 +126,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strange Eons Part:\n",
+    "### Manual Part:\n",
     "\n",
-    "1. Open `setGenerator.seproject` in Strange Eons.\n",
+    "1. Open `setGenerator.seproject`.\n",
     "2. Run `Script/makeCards` script by double clicking it.\n",
-    "3. Once completed, close Strange Eons (wait until it finished packing the project)."
+    "3. Once completed, close the program (wait until it finished packing the project)."
    ]
   },
   {
