Next renderer draft

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -90,8 +90,8 @@
     "        eons = True\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
-    "        new_hash, old_hash = lotr.calculate_hashes(set_id, set_name, lang)\n",
-    "        if new_hash != old_hash:\n",
+    "        file_changes, _ = lotr.calculate_hashes(set_id, set_name, lang)\n",
+    "        if file_changes:\n",
     "            changes = True\n",
     "\n",
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
