Update Jupyter notebook

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -31,10 +31,20 @@
     "\n",
     "conf = lotr.read_conf()\n",
     "\n",
+    "if os.path.exists(lotr.REPROCESS_ALL_PATH):\n",
+    "    conf['reprocess_all'] = True\n",
+    "    logging.info('Setting \"reprocess_all\" to \"true\" for this run')\n",
+    "    os.remove(lotr.REPROCESS_ALL_PATH)\n",
+    "\n",
     "if (not conf['reprocess_all'] and conf['reprocess_all_on_error'] and\n",
     "        os.path.exists(lotr.PIPELINE_STARTED_PATH)):\n",
     "    conf['reprocess_all'] = True\n",
     "    logging.info('The previous update did not succeed, setting \"reprocess_all\" to \"true\" for this run')\n",
+    "\n",
+    "if (conf['upload_dragncards'] and\n",
+    "        conf['dragncards_hostname'] and\n",
+    "        conf['dragncards_id_rsa_path']):\n",
+    "    lotr.write_remote_dragncards_folder(conf)\n",
     "\n",
     "lotr.download_sheet(conf)\n",
     "\n",
@@ -52,6 +62,7 @@
     "\n",
     "eons = False\n",
     "changes = False\n",
+    "renderer_sets = []\n",
     "for set_id, set_name in sets:\n",
     "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "    if conf['octgn_set_xml']:\n",
@@ -82,20 +93,43 @@
     "    if conf['output_languages']:\n",
     "        lotr.copy_custom_images(conf, set_id, set_name)\n",
     "\n",
-    "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
+    "    renderer_xml_generated = False\n",
+    "    renderer_xml_changed = False\n",
     "    for lang in conf['output_languages']:\n",
     "        if scratch and lang != 'English':\n",
     "            continue\n",
     "\n",
     "        eons = True\n",
+    "        if lang == 'English':\n",
+    "            renderer_xml_generated = True\n",
+    "\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
-    "        file_changes, _ = lotr.calculate_hashes(set_id, set_name, lang)\n",
+    "        file_changes, dragncards_changes = lotr.calculate_hashes(set_id, set_name, lang)\n",
     "        if file_changes:\n",
     "            changes = True\n",
+    "            if dragncards_changes and lang == 'English':\n",
+    "                renderer_xml_changed = True\n",
     "\n",
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
     "        lotr.copy_xml(set_id, set_name, lang)\n",
+    "\n",
+    "    if conf['renderer'] and not renderer_xml_generated:\n",
+    "        lotr.generate_xml(conf, set_id, set_name, 'English')\n",
+    "        lotr.update_xml(conf, set_id, set_name, 'English')\n",
+    "        _, dragncards_changes = lotr.calculate_hashes(set_id, set_name, 'English')\n",
+    "        if dragncards_changes:\n",
+    "            renderer_xml_changed = True\n",
+    "\n",
+    "        renderer_xml_generated = True\n",
+    "\n",
+    "    if conf['renderer'] and renderer_xml_changed:\n",
+    "        renderer_sets.append(set_id)\n",
+    "\n",
+    "    if conf['renderer_artwork'] and not renderer_xml_generated:\n",
+    "        lotr.generate_xml(conf, set_id, set_name, 'English')\n",
+    "        lotr.update_xml(conf, set_id, set_name, 'English')\n",
+    "        lotr.calculate_hashes(set_id, set_name, 'English')\n",
     "\n",
     "if conf['octgn_set_xml'] or conf['octgn_o8d']:\n",
     "    lotr.copy_octgn_outputs(conf, sets)\n",
@@ -103,13 +137,22 @@
     "if conf['ringsdb_csv'] and conf['update_ringsdb']:\n",
     "    lotr.update_ringsdb(conf, sets)\n",
     "\n",
+    "if renderer_sets:\n",
+    "    lotr.generate_dragncards_proxies(renderer_sets)\n",
+    "\n",
+    "if (conf['upload_dragncards_lightweight'] and\n",
+    "        conf['dragncards_hostname'] and\n",
+    "        conf['dragncards_id_rsa_path']):\n",
+    "    lotr.upload_dragncards_lightweight_outputs(conf, sets)\n",
+    "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
     "    with open(lotr.PROJECT_CREATED_PATH, 'w', encoding='utf-8'):\n",
     "        pass\n",
     "else:\n",
-    "    if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
-    "        os.remove(lotr.PIPELINE_STARTED_PATH)\n",
+    "    if not conf['renderer_artwork']:\n",
+    "        if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
+    "            os.remove(lotr.PIPELINE_STARTED_PATH)\n",
     "\n",
     "    if eons:\n",
     "        logging.info('No changes since the last run, skipping creating the project')\n",
@@ -129,7 +172,7 @@
     "### Manual Part:\n",
     "\n",
     "1. Open `setGenerator.seproject`.\n",
-    "2. Run `Script/makeCards` script by double clicking it.\n",
+    "2. Run `makeCards` script by double clicking it.\n",
     "3. Once completed, close the program (wait until it finished packing the project)."
    ]
   },
@@ -218,6 +261,9 @@
     "        if 'tts' in conf['outputs'][lang]:\n",
     "            lotr.generate_tts(conf, set_id, set_name, lang, card_dict, scratch)\n",
     "\n",
+    "    if conf['renderer_artwork']:\n",
+    "        lotr.generate_renderer_artwork(conf, set_id, set_name)\n",
+    "\n",
     "if 'English' in conf['output_languages']:\n",
     "    updated_sets = [s for s in sets if (s[0], 'English') in actual_sets\n",
     "                    and not lotr.get_skip_info(s[0], 'English')[0]]\n",
@@ -236,8 +282,8 @@
     "        'tts' in conf['outputs']['English'] and updated_sets):\n",
     "    lotr.copy_tts_outputs(conf, updated_sets)\n",
     "\n",
-    "if conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
-    "    lotr.upload_dragncards(conf, sets, updated_sets)\n",
+    "if updated_sets and conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
+    "    lotr.upload_dragncards_images(conf, updated_sets)\n",
     "\n",
     "if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
     "    os.remove(lotr.PIPELINE_STARTED_PATH)\n",
