Update jupyter notebook

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -74,9 +74,6 @@
     "    if conf['ringsdb_csv']:\n",
     "        lotr.generate_ringsdb_csv(conf, set_id, set_name)\n",
     "\n",
-    "    if conf['dragncards_json']:\n",
-    "        lotr.generate_dragncards_json(conf, set_id, set_name)\n",
-    "\n",
     "    if conf['frenchdb_csv']:\n",
     "        lotr.generate_frenchdb_csv(conf, set_id, set_name)\n",
     "\n",
@@ -93,15 +90,15 @@
     "    if conf['output_languages']:\n",
     "        lotr.copy_custom_images(conf, set_id, set_name)\n",
     "\n",
-    "    renderer_xml_generated = False\n",
-    "    renderer_xml_changed = False\n",
+    "    xml_generated = False\n",
+    "    xml_changed = False\n",
     "    for lang in conf['output_languages']:\n",
     "        if scratch and lang != 'English':\n",
     "            continue\n",
     "\n",
     "        eons = True\n",
     "        if lang == 'English':\n",
-    "            renderer_xml_generated = True\n",
+    "            xml_generated = True\n",
     "\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
     "        lotr.update_xml(conf, set_id, set_name, lang)\n",
@@ -109,27 +106,31 @@
     "        if file_changes:\n",
     "            changes = True\n",
     "            if dragncards_changes and lang == 'English':\n",
-    "                renderer_xml_changed = True\n",
+    "                xml_changed = True\n",
     "\n",
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
-    "    if conf['renderer'] and not renderer_xml_generated:\n",
+    "    if conf['renderer'] and not xml_generated:\n",
     "        lotr.generate_xml(conf, set_id, set_name, 'English')\n",
     "        lotr.update_xml(conf, set_id, set_name, 'English')\n",
     "        _, dragncards_changes = lotr.calculate_hashes(set_id, set_name, 'English')\n",
     "        if dragncards_changes:\n",
-    "            renderer_xml_changed = True\n",
+    "            xml_changed = True\n",
     "\n",
-    "        renderer_xml_generated = True\n",
+    "        xml_generated = True\n",
     "\n",
-    "    if conf['renderer'] and renderer_xml_changed:\n",
+    "    if conf['renderer'] and xml_changed:\n",
     "        renderer_sets.append(set_id)\n",
     "\n",
-    "    if conf['renderer_artwork'] and not renderer_xml_generated:\n",
+    "    if (conf['renderer_artwork'] or conf['dragncards_json']) and not xml_generated:\n",
     "        lotr.generate_xml(conf, set_id, set_name, 'English')\n",
     "        lotr.update_xml(conf, set_id, set_name, 'English')\n",
     "        lotr.calculate_hashes(set_id, set_name, 'English')\n",
+    "        xml_generated = True\n",
+    "\n",
+    "    if conf['dragncards_json']:\n",
+    "        lotr.generate_dragncards_json(conf, set_id, set_name)\n",
     "\n",
     "if conf['octgn_set_xml'] or conf['octgn_o8d']:\n",
     "    lotr.copy_octgn_outputs(conf, sets)\n",
