Log text overflow errors

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -265,6 +265,8 @@
     "    if conf['renderer_artwork']:\n",
     "        lotr.generate_renderer_artwork(conf, set_id, set_name)\n",
     "\n",
+    "lotr.check_messages()\n",
+    "\n",
     "if 'English' in conf['output_languages']:\n",
     "    updated_sets = [s for s in sets if (s[0], 'English') in actual_sets\n",
     "                    and not lotr.get_skip_info(s[0], 'English')[0]]\n",
