Remove artwork ids of the cards from the broken scratch sets

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -54,7 +54,7 @@
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
     "sets = lotr.sanity_check(conf, sets)\n",
-    "lotr.save_data_for_bot(conf)\n",
+    "lotr.save_data_for_bot(confi, sets)\n",
     "\n",
     "if conf['output_languages']:\n",
     "    lotr.verify_images(conf)\n",
