Sync Jupyter notebook

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -54,8 +54,11 @@
     "lotr.extract_data(conf)\n",
     "sets = lotr.get_sets(conf)\n",
     "sets = lotr.sanity_check(conf, sets)\n",
-    "lotr.save_data_for_bot(confi, sets)\n",
+    "lotr.save_data_for_bot(conf, sets)\n",
     "\n",
+    "if conf['renderer']:\n",
+    "    lotr.expire_dragncards_hashes()\n",
+    "    \n",
     "if conf['output_languages']:\n",
     "    lotr.verify_images(conf)\n",
     "    lotr.reset_project_folders(conf)\n",
@@ -154,6 +157,9 @@
     "    if not conf['renderer_artwork']:\n",
     "        if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
     "            os.remove(lotr.PIPELINE_STARTED_PATH)\n",
+    "\n",
+    "        if os.path.exists(lotr.REPROCESS_COUNT_PATH):\n",
+    "            os.remove(lotr.REPROCESS_COUNT_PATH)\n",
     "\n",
     "    if eons:\n",
     "        logging.info('No changes since the last run, skipping creating the project')\n",
@@ -290,6 +296,9 @@
     "\n",
     "if os.path.exists(lotr.PIPELINE_STARTED_PATH):\n",
     "    os.remove(lotr.PIPELINE_STARTED_PATH)\n",
+    "\n",
+    "if os.path.exists(lotr.REPROCESS_COUNT_PATH):\n",
+    "    os.remove(lotr.REPROCESS_COUNT_PATH)\n",
     "\n",
     "logging.info('Done (%ss)', round(time.time() - timestamp, 3))"
    ]
