1. Move docs to a separate folder, 2. Fix a recent bug with PROJECT_PATH constant

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -26,8 +26,8 @@
     "with open(lotr.RUN_BEFORE_SE_STARTED_PATH, 'w', encoding='utf-8'):\n",
     "    pass\n",
     "\n",
-    "if os.path.exists(lotr.PROJECT_CREATED_PATH):\n",
-    "    os.remove(lotr.PROJECT_CREATED_PATH)\n",
+    "if os.path.exists(lotr.SEPROJECT_CREATED_PATH):\n",
+    "    os.remove(lotr.SEPROJECT_CREATED_PATH)\n",
     "\n",
     "conf = lotr.read_conf()\n",
     "\n",
@@ -151,7 +151,7 @@
     "\n",
     "if changes:\n",
     "    lotr.create_project()\n",
-    "    with open(lotr.PROJECT_CREATED_PATH, 'w', encoding='utf-8'):\n",
+    "    with open(lotr.SEPROJECT_CREATED_PATH, 'w', encoding='utf-8'):\n",
     "        pass\n",
     "else:\n",
     "    if not conf['renderer_artwork']:\n",
