--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -84,8 +84,8 @@
     "        lotr.generate_spanishdb_csv(conf, set_id, set_name)\n",
     "\n",
     "    if conf['hallofbeorn_json']:\n",
-    "        for lang in (conf['output_languages'] or ['English']):\n",
-    "            if scratch and lang != 'English':\n",
+    "        for lang in (conf['output_languages'] or [lotr.L_ENGLISH]):\n",
+    "            if scratch and lang != lotr.L_ENGLISH:\n",
     "                continue\n",
     "\n",
     "            lotr.generate_hallofbeorn_json(conf, set_id, set_name, lang)\n",
@@ -96,11 +96,11 @@
     "    xml_generated = False\n",
     "    xml_changed = False\n",
     "    for lang in conf['output_languages']:\n",
-    "        if scratch and lang != 'English':\n",
+    "        if scratch and lang != lotr.L_ENGLISH:\n",
     "            continue\n",
     "\n",
     "        eons = True\n",
-    "        if lang == 'English':\n",
+    "        if lang == lotr.L_ENGLISH:\n",
     "            xml_generated = True\n",
     "\n",
     "        lotr.generate_xml(conf, set_id, set_name, lang)\n",
@@ -108,16 +108,16 @@
     "        file_changes, dragncards_changes = lotr.calculate_hashes(set_id, set_name, lang)\n",
     "        if file_changes:\n",
     "            changes = True\n",
-    "            if dragncards_changes and lang == 'English':\n",
+    "            if dragncards_changes and lang == lotr.L_ENGLISH:\n",
     "                xml_changed = True\n",
     "\n",
     "        lotr.copy_raw_images(conf, set_id, set_name, lang)\n",
     "        lotr.copy_xml(set_id, set_name, lang)\n",
     "\n",
     "    if conf['renderer'] and not xml_generated:\n",
-    "        lotr.generate_xml(conf, set_id, set_name, 'English')\n",
-    "        lotr.update_xml(conf, set_id, set_name, 'English')\n",
-    "        _, dragncards_changes = lotr.calculate_hashes(set_id, set_name, 'English')\n",
+    "        lotr.generate_xml(conf, set_id, set_name, lotr.L_ENGLISH)\n",
+    "        lotr.update_xml(conf, set_id, set_name, lotr.L_ENGLISH)\n",
+    "        _, dragncards_changes = lotr.calculate_hashes(set_id, set_name, lotr.L_ENGLISH)\n",
     "        if dragncards_changes:\n",
     "            xml_changed = True\n",
     "\n",
@@ -127,9 +127,9 @@
     "        renderer_sets.append(set_id)\n",
     "\n",
     "    if (conf['renderer_artwork'] or conf['dragncards_json']) and not xml_generated:\n",
-    "        lotr.generate_xml(conf, set_id, set_name, 'English')\n",
-    "        lotr.update_xml(conf, set_id, set_name, 'English')\n",
-    "        lotr.calculate_hashes(set_id, set_name, 'English')\n",
+    "        lotr.generate_xml(conf, set_id, set_name, lotr.L_ENGLISH)\n",
+    "        lotr.update_xml(conf, set_id, set_name, lotr.L_ENGLISH)\n",
+    "        lotr.calculate_hashes(set_id, set_name, lotr.L_ENGLISH)\n",
     "        xml_generated = True\n",
     "\n",
     "    if conf['dragncards_json']:\n",
@@ -199,7 +199,7 @@
     "for set_id, set_name in sets:\n",
     "    scratch = set_id in lotr.FOUND_SCRATCH_SETS\n",
     "    for lang in conf['output_languages']:\n",
-    "        if scratch and lang != 'English':\n",
+    "        if scratch and lang != lotr.L_ENGLISH:\n",
     "            continue\n",
     "\n",
     "        skip_set, skip_ids = lotr.get_skip_info(set_id, lang)\n",
@@ -273,22 +273,22 @@
     "\n",
     "lotr.check_messages()\n",
     "\n",
-    "if 'English' in conf['output_languages']:\n",
-    "    updated_sets = [s for s in sets if (s[0], 'English') in actual_sets\n",
-    "                    and not lotr.get_skip_info(s[0], 'English')[0]]\n",
+    "if lotr.L_ENGLISH in conf['output_languages']:\n",
+    "    updated_sets = [s for s in sets if (s[0], lotr.L_ENGLISH) in actual_sets\n",
+    "                    and not lotr.get_skip_info(s[0], lotr.L_ENGLISH)[0]]\n",
     "else:\n",
     "    updated_sets = []\n",
     "\n",
-    "if (conf['db_destination_path'] and 'English' in conf['output_languages'] and\n",
-    "        'db' in conf['outputs']['English'] and updated_sets):\n",
+    "if (conf['db_destination_path'] and lotr.L_ENGLISH in conf['output_languages'] and\n",
+    "        'db' in conf['outputs'][lotr.L_ENGLISH] and updated_sets):\n",
     "    lotr.copy_db_outputs(conf, updated_sets)\n",
     "\n",
-    "if (conf['octgn_image_destination_path'] and 'English' in conf['output_languages'] and\n",
-    "        'octgn' in conf['outputs']['English'] and updated_sets):\n",
+    "if (conf['octgn_image_destination_path'] and lotr.L_ENGLISH in conf['output_languages'] and\n",
+    "        'octgn' in conf['outputs'][lotr.L_ENGLISH] and updated_sets):\n",
     "    lotr.copy_octgn_image_outputs(conf, updated_sets)\n",
     "\n",
-    "if (conf['tts_destination_path'] and 'English' in conf['output_languages'] and\n",
-    "        'tts' in conf['outputs']['English'] and updated_sets):\n",
+    "if (conf['tts_destination_path'] and lotr.L_ENGLISH in conf['output_languages'] and\n",
+    "        'tts' in conf['outputs'][lotr.L_ENGLISH] and updated_sets):\n",
     "    lotr.copy_tts_outputs(conf, updated_sets)\n",
     "\n",
     "if updated_sets and conf['upload_dragncards'] and conf['dragncards_hostname'] and conf['dragncards_id_rsa_path']:\n",
